correcting Terms and Privacy policy modals

--- a/client/views/partials/login.html
+++ b/client/views/partials/login.html
@@ -19,7 +19,7 @@
 <div ng-controller="RegisterCtrl" class="login-border">
 
 <!-- BEGIN TERMS CONTENT (Modal View) -->
-<div id="modalTerms" modal="terms" close="closeTerms()" options="opts">
+<div id="modalTerms" modal="termsModal" close="closeTerms()" options="opts">
 <div class="modal-header">
     <h4>Termini di Servizio</h4>
     <button id="activityModalClose" class="btn modalButton float-right" ng-click="closeTerms()">x</button>
