#47 client side hook for user profile first name update

--- a/client/views/partials/useredit.html
+++ b/client/views/partials/useredit.html
@@ -10,7 +10,6 @@
                 </a>
             </div>
         </div>
-        <!-- FIXME: GET REAL USER DATA FROM DB -->
         <div class="span1"></div>
         <div class="span8 top-margin userData">
 
@@ -21,7 +20,7 @@
                     <input class="userForm" type="text"
                            name="userName"
                            ng-model="userProfile.name" required
-                           ui-Blur="updateLdName()"
+                           ui-Blur="updateUserProfileFirstName()"
                            ng-maxlength="50"
                            ng-pattern="/^[a-zA-Zòàùèéì ]+$/">
 
