--- a/client/views/index.html
+++ b/client/views/index.html
@@ -84,7 +84,7 @@
                             <b class="caret"></b>
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a href="/useredit"><i class="icon-cog"></i> Il mio profilo</a></li>
+                            <li><a id="myProfileLink" href="/useredit"><i class="icon-cog"></i> Il mio profilo</a></li>
                             <li><a href="/userlds/{{user.id}}"><i class="icon-pencil"></i> I miei progetti</a></li>
                             <li class="divider"></li>
                             <li><a id="logoutLink" ng-click="logout()" href=""><i class="icon-off"></i> Esci</a></li>
