#47 private user profile update last name

--- a/client/views/partials/useredit.html
+++ b/client/views/partials/useredit.html
@@ -40,7 +40,7 @@
                     <input class="userForm" type="text"
                            name="userLastName"
                            ng-model="userProfile.last_name" required
-                           ui-Blur="updateLdName()"
+                           ui-Blur="updateUserProfileLastName()"
                            ng-maxlength="100"
                            ng-pattern="/^[a-zA-Zòàùèéì ]+$/">
 
