#47 client side user profile update email

--- a/client/views/partials/useredit.html
+++ b/client/views/partials/useredit.html
@@ -60,7 +60,7 @@
                     <input class="userForm" type="text"
                            name="userEmail"
                            ng-model="userProfile.email" required
-                           ui-Blur="updateLdName()"
+                           ui-Blur="updateUserProfileEmail()"
                            ng-maxlength="255"
                            ng-pattern="/^[a-zA-Z0-9@.]+$/">
 
