#47 UI feedback on user profile update

--- a/client/views/partials/useredit.html
+++ b/client/views/partials/useredit.html
@@ -13,6 +13,10 @@
         <div class="span1"></div>
         <div class="span8 top-margin userData">
 
+        		<div id="updateErrors" ng-show="userProfileUpdateErrors" class="updateErrors">
+        			{{ userProfileUpdateErrors }}
+    				</div>
+
         		<!-- User First Name -->
             <form name="UserName" novalidate="" class="singleForm">
                 <div>
