--- a/client/views/partials/useredit.html
+++ b/client/views/partials/useredit.html
@@ -61,7 +61,7 @@
  						<form name="UserEmail" novalidate="" class="singleForm">
                 <div>
                     <label class="userLabel">E-mail: </label>
-                    <input class="userForm" type="text"
+                    <input id="userProfileEmail" class="userForm" type="text"
                            name="userEmail"
                            ng-model="userProfile.email" required
                            ui-Blur="updateUserProfileEmail()"
@@ -81,10 +81,10 @@
         		<form name="UserWorkplace" novalidate="" class="singleForm">
                 <div>
                     <label class="userLabel">Luogo di lavoro: </label>
-                    <input class="userForm" type="text"
+                    <input id="userProfileWorkplace" class="userForm" type="text"
                            name="userWorkplace"
                            ng-model="userProfile.workplace"
-                           ui-Blur="updateLdName()"
+                           ui-Blur="updateUserProfileWorkplace()"
                            ng-maxlength="50"
                            ng-pattern="/^[a-zA-Zòàùèéì ]+$/">
 
@@ -101,10 +101,10 @@
             <form name="City" novalidate="" class="singleForm">
                 <div>
                     <label class="userLabel">Citt&agrave;: </label>
-                    <input class="userForm" type="text"
+                    <input id="userProfileCity" class="userForm" type="text"
                            name="city"
                            ng-model="userProfile.city"
-                           ui-Blur="updateLdName()"
+                           ui-Blur="updateUserProfileCity()"
                            ng-maxlength="50"
                            ng-pattern="/^[a-zA-Zòàùèéì ]+$/">
 
@@ -121,10 +121,10 @@
             <form name="Country" novalidate="" class="singleForm">
                 <div>
                     <label class="userLabel">Paese: </label>
-                    <input class="userForm" type="text"
+                    <input id="userProfileCountry" class="userForm" type="text"
                            name="country"
                            ng-model="userProfile.country"
-                           ui-Blur="updateLdName()"
+                           ui-Blur="updateUserProfileCountry()"
                            ng-maxlength="50"
                            ng-pattern="/^[a-zA-Zòàùèéì ]+$/">
 
